# conversational-analysis

./: README.md  dataloaders.py  docker-compose-no-gpu.yml  embeddings.py  ingestion.py  llama_integrations.py  llamaindex_test.ipynb  milly.py  milvus-standalone-docker-compose-gpu.yml  milvus_cookbook.ipynb  model.py  noteb.ipynb  pyproject.toml  test_engine.py  tests.py  train.py
data/: friends_trivia.txt
